--- a/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
+++ b/project_binary_fetch/binary_fetch_v1/Default_BinaryFetch_Config.json
@@ -217,10 +217,10 @@
     "show_type": true,
     "show_ip": true,
     "colors": {
-      "[Network]": "cyan",
+      "Network": "cyan",
       "(": "red",
       ")": "red",
-      "->": "bright_cyan",
+      "Network_:": "bright_cyan",
       "label_color": "bright_cyan",
       "name_color": "bright_cyan",
       "type_color": "bright_cyan",
